--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "preentrega1-kae",
+  "name": "preentrega3-kae",
   "version": "1.0.0",
-  "description": "Pagina con Bootstrap\r Pagina Full Responsive\r GitHub\r Flexbox y Grids",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +12,6 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "sass": "^1.69.0"
+    "sass": "^1.69.4"
   }
 }
